--- a/Projet/CMakeLists.txt
+++ b/Projet/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.27)
 project(MathsOpenGl)
 
 set(CMAKE_CXX_STANDARD 17)
-find_package(OpenGL)
+find_package(OpenGL REQUIRED)
 link_directories(${OPENGL_gl_LIBRARY})
 
 include_directories(../libs/glfw/include)
-include_directories(../libs/glew/include)
+include_directories(../libs/glut/include)
 
 link_directories(../libs/glfw/lib-static-ucrt)
-link_directories(../libs/glew/lib/Release/x64)
+link_directories(../libs/glut/lib/x64)
 
-add_executable(MathsOpenGl main.cpp ../common/GLShader.cpp)
-target_link_libraries(MathsOpenGl glfw3 ${OPENGL_gl_LIBRARY} glew32)
+add_executable(MathsOpenGl main.cpp)
+target_link_libraries(MathsOpenGl glfw3 ${OPENGL_gl_LIBRARY} freeglut)
