Migration from glut to imgui (wip)
TODO: make it work properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,12 @@ if(CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
     endif()
 endif()
 
-find_package(OpenGL REQUIRED)
-link_directories(${OPENGL_gl_LIBRARY})
-
 option(GLM_BUILD_TESTS "" OFF)
 add_subdirectory(libs/glm-master)
 
-option(FREEGLUT_BUILD_SHARED_LIBS "" OFF)
-add_subdirectory(libs/freeglut-3.4.0)
-set(FREEGLUT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/freeglut-3.4.0/include/)
+#option(FREEGLUT_BUILD_SHARED_LIBS "" OFF)
+#add_subdirectory(libs/freeglut-3.4.0)
+#set(FREEGLUT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/freeglut-3.4.0/include/)
 
 option(GLFW_BUILD_EXAMPLES "" OFF)
 option(GLFW_BUILD_TESTS "" OFF)
@@ -25,5 +22,12 @@ add_subdirectory(libs/glfw-3.3.9)
 
 add_subdirectory(libs/spdlog-1.12.0)
 
+set(IMGUI_GLFW ON)
+set(IMGUI_OPENGL3 ON)
+set(IMGUI_OPENGL3_LOADER ON)
+add_subdirectory(libs/imgui-docking)
+add_subdirectory(libs/glad)
+# Need to say to imgui where is glfw
+target_link_libraries(imgui PUBLIC glfw)
 
 add_subdirectory(Projet)
